# gig

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: Makefile  conf.py  index.rst  make.bat
gig/: CMakeLists.txt  gig.cpp  gig.h
test/: CMakeLists.txt  test_gig.cpp
